syntax = "proto3";

package tolymer;

service Guest {
  rpc CreateEvent (CreateEventRequest) returns (CreateEventResponse);
  rpc GetEvent (GetEventRequest) returns (GetEventResponse);
  rpc UpdateEvent (UpdateEventRequest) returns (UpdateEventResponse);
  rpc CreateGame (CreateGameRequest) returns (CreateGameResponse);
  rpc UpdateGame (UpdateGameRequest) returns (UpdateGameResponse);
}

message CreateEventRequest {
  string title = 1;
  string description = 2;
  string date = 3;
  repeated string members = 4;
}

message CreateEventResponse {
  string event_token = 1;
}

message GetEventRequest {
  string event_token = 1;
}

message GetEventResponse {
  Event event = 1;
}

message UpdateEventRequest {
  string event_token = 1;
  string title = 2;
  string description = 3;
  string date = 4;
  repeated string members = 5;
}

message UpdateEventResponse {
  bool result = 1;
}

message CreateGameRequest {
  string event_token = 1;
  repeated Score scores = 2;
}

message CreateGameResponse {
  int32 game_id = 1;
}

message UpdateGameRequest {
  int32 game_id = 1;
  repeated Score scores = 2;
}

message UpdateGameResponse {
  bool result = 1;
}

message Event {
  string token = 1;
  string title = 2;
  string description = 3;
  string date = 4;
  repeated Member members = 5;
  repeated Game games = 6;
}

message Member {
  int32 id = 1;
  string name = 2;
}

message Game {
  int32 id = 1;
  int32 event_id = 2;
  repeated Score scores = 3;
}

message Score {
  int32 member_id = 1;
  int32 point = 2;
}
